--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-343.4KB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-436.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-466.2KB/s(Youtube:不良林), server: 185.167.116.250, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-196.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-1.84MB/s(Youtube:不良林), server: hk16.bp777.buzz, port: 21665, type: vmess, uuid: f658845f-9676-4a24-b7f7-8a197c8cb748, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: hk16.bp777.buzz}}
-  - {name: 🇺🇸 美国-368.6KB/s(Youtube:不良林), server: hd-1.ienai.xin, port: 443, type: vmess, uuid: 03b188df-f7be-4038-8bc3-ffd2edb2b56a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ienai/ACOT_ddf1dcec-43e8-4e59-ae41-5382e18a7729:878047eae84dfce4b2d895aa7252421f/, ws-headers: {Host: hd-1.ienai.xin}}
-  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 45.78.78.62, port: 38212, type: vmess, uuid: 5349d03e-7ef8-4aa1-e8a3-87d6f0fcd9c0, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇬🇧 英国-862.4KB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-436.1KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇺🇸 美国-1.31MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇯🇵 日本-2.94MB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇨🇦 加拿大-850.5KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-2.51MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-395.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.25MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.56MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇸🇬 新加坡-1.30MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-466.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-368.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-862.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-466.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-368.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-862.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-466.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-368.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-862.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-466.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-368.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-862.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-466.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-368.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-862.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-466.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-368.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-862.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-343.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-466.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
-      - 🇨🇳 中国-196.0KB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.84MB/s(Youtube:不良林)
-      - 🇺🇸 美国-368.6KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇬🇧 英国-862.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-436.1KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.31MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.94MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-850.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.51MB/s(Youtube:不良林)
+      - 🇨🇳 中国-395.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.25MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.56MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-1.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
