--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇳🇱 荷兰-1.49MB/s(Youtube:不良林), server: 213.183.51.172, port: 9020, type: ss, cipher: aes-256-cfb, password: BNmAXXxAHYpTRdzu}
-  - {name: 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林), server: 213.183.53.207, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
-  - {name: 🇷🇺 俄罗斯联邦-3.67MB/s(Youtube:不良林), server: 213.183.53.214, port: 9064, type: ss, cipher: aes-256-cfb, password: cp8pRSUAyLhTfVWH}
-  - {name: 未知国家-180.7KB/s(Youtube:不良林), server: v116.v2dns.bar, port: 80, type: vmess, uuid: c97cf46e-1554-36cb-8b36-c3556b883dc4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v116-DtoEwAEX, ws-headers: {Host: v116.v2dns.bar}}
-  - {name: 波兰-2.38MB/s(Youtube:不良林), server: 217.30.10.65, port: 9042, type: ss, cipher: aes-256-cfb, password: S7KwUu7yBy58S3Ga}
+  - {name: 🇺🇸 美国-1.16MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 保加利亚-259.0KB/s(Youtube:不良林), server: 213.183.63.217, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇨🇳 中国-601.8KB/s(Youtube:不良林), server: aiaph1.www.klrxyru.cn, port: 1641, type: ssr, cipher: chacha20-ietf, password: mtbv8n, protocol: auth_aes128_md5, obfs: plain, protocol-param: 84393:25lGIs, obfs-param: b43e313.wns.windows.com}
+  - {name: 保加利亚-206.2KB/s(Youtube:不良林), server: 213.183.63.217, port: 9031, type: ss, cipher: aes-256-cfb, password: BwcAUZk8hUFAkDGN}
+  - {name: 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
   - {name: 波兰-885.8KB/s(Youtube:不良林), server: 217.30.10.63, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
   - {name: 波兰-688.0KB/s(Youtube:不良林), server: 217.30.10.67, port: 9080, type: ss, cipher: aes-256-cfb, password: VP8ZPxQpJtZRCjfZ}
   - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 38.121.43.71, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.67MB/s(Youtube:不良林)
-      - 未知国家-180.7KB/s(Youtube:不良林)
-      - 波兰-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.67MB/s(Youtube:不良林)
-      - 未知国家-180.7KB/s(Youtube:不良林)
-      - 波兰-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.67MB/s(Youtube:不良林)
-      - 未知国家-180.7KB/s(Youtube:不良林)
-      - 波兰-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.67MB/s(Youtube:不良林)
-      - 未知国家-180.7KB/s(Youtube:不良林)
-      - 波兰-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.67MB/s(Youtube:不良林)
-      - 未知国家-180.7KB/s(Youtube:不良林)
-      - 波兰-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.67MB/s(Youtube:不良林)
-      - 未知国家-180.7KB/s(Youtube:不良林)
-      - 波兰-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇳🇱 荷兰-1.49MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.83MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-3.67MB/s(Youtube:不良林)
-      - 未知国家-180.7KB/s(Youtube:不良林)
-      - 波兰-2.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.16MB/s(Youtube:不良林)
+      - 保加利亚-259.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-601.8KB/s(Youtube:不良林)
+      - 保加利亚-206.2KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.23MB/s(Youtube:不良林)
       - 波兰-885.8KB/s(Youtube:不良林)
       - 波兰-688.0KB/s(Youtube:不良林)
       - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
